--- a/style_informativo.css
+++ b/style_informativo.css
@@ -115,6 +115,20 @@ header h1 {
     gap: 20px;
     justify-content: center;
 }
+.modo-flex .galery-item {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+}
+.galery-item {
+    background: var(--bg-card);
+    padding: 10px;
+    overflow: hidden;
+    border: 1px solid var(--border-color);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+    transition: transform 0.3s ease;
+}
+
 .info-footer {
     margin-top: 40px;
     display: grid;
