--- a/style_informativo.css
+++ b/style_informativo.css
@@ -115,24 +115,24 @@ header h1 {
     gap: 20px;
     justify-content: center;
 }
-.modo-flex .galery-item {
+.mode-flex .gallery-item {
     flex: 1 1 250px;
     max-width: 400px;
 }
 .mode-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap:20px;
+    gap:20px
 }
-.galery-item {
+.gallery-item {
     background: var(--bg-card);
-    padding: 10px;
+    border-radius: 10px;
     overflow: hidden;
     border: 1px solid var(--border-color);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
     transition: transform 0.3s ease;
 }
-.galery-item hover {
+.gallery-item:hover {
     transform: translateY(-5px);
 }
 .img-box {
@@ -150,7 +150,7 @@ header h1 {
 }
 .content-box h4 {
     margin: 0 0 8px 0;
-    color: var(--text-muted);
+    color: var(--text-main);
 }
 .content-box p {
     margin: 0;
@@ -188,10 +188,8 @@ header h1 {
     border: 1px solid var(--footer-border-100);
     color: var(--footer-color-100);
 }
-@media (max-width: 600px) {
+@media (max-width: 600px){
     .controls-panel {
         flex-direction: column;
     }
-    
-
 }
